force-app/main/default/objects/Sales_Indication__c/Sales_Indication__c.object-meta.xml
<CustomObject>
    <description>User story 297. Used to indicate if product sold on Opportunity (and Quote) is New Business, Upsell, Cross Sell or/and Renewal</description>
    <label>Sales Indication</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Sales Indication Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sales Indication</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>