force-app/main/default/objects/Sales_Indication__c/fields/Amount_k12__c.field-meta.xml
<CustomField>
    <fullName>Amount_k12__c</fullName>
    <inlineHelpText>K12 - the estimated value of the first 12 months of the contract</inlineHelpText>
    <label>Amount (k12)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>