force-app/main/default/objects/Sales_Indication__c/fields/is_Same_Sales_Type_as_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>is_Same_Sales_Type_as_Opportunity__c</fullName>
    <description>Checks if the Sales Types match from Sales Indication and Opportunity.
Used for checking with opportunity Type. Can be removed at any time.</description>
    <formula>TEXT(Sales_Type__c) =  TEXT(Opportunity__r.Type)</formula>
    <inlineHelpText>Checks if the Sales Types match from Sales Indication and Opportunity.</inlineHelpText>
    <label>is Same Sales Type as Opportunity</label>
    <type>Checkbox</type>
</CustomField>