force-app/main/default/objects/Sales_Indication__c/fields/Sales_Type__c.field-meta.xml
<CustomField>
    <fullName>Sales_Type__c</fullName>
    <inlineHelpText>New Business: Selling to a new customer with no existing engagement(s)
Cross sell: Selling something new to an existing customer
Up sale: Selling more of something the customer already has
Renewal: Renewing an existing agreement</inlineHelpText>
    <label>Sales Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New Business</fullName>
            </value>
            <value>
                <fullName>Cross Sell</fullName>
            </value>
            <value>
                <fullName>Up Sale</fullName>
            </value>
            <value>
                <fullName>Renewal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>