force-app/main/default/objects/Sales_Indication__c/fields/Telia_Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Telia_Product_Category__c</fullName>
    <inlineHelpText>Enter the product categories and indicate the type of sales (eg. Voice can be entered twice where a part is renewal and a part is Upsell)</inlineHelpText>
    <label>Telia Product Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Telia_Product_Category</valueSetName>
    </valueSet>
</CustomField>